Fixed overflow bug in folder panel.

--- a/freeki-client/src/App.css
+++ b/freeki-client/src/App.css
@@ -85,6 +85,7 @@
   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .fade-panel.hidden {
